--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <footer>Getulio 💕 Paola </footer>
 </body>
 
-<script src="/node_modules/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script type="module" src="/main.js"></script>
 </html>
