--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script type="module" src="/main.js"></script>
+<script type="module" src="./main.js"></script>
 </html>
