--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
     </main>
     
-    <footer>Getulio 💕 Paola </footer>
+    <footer>Getulio |💕| Paola </footer>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
