--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <link rel="stylesheet" href="src/style/index.css">
+
         <title>Quotazione EUR | USD | BRL</title>
     </head>
     
@@ -41,7 +43,7 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script type="module" src="/src/script/main.js"></script>
+<script type="module" src="./src/script/main.js"></script>
 
 
 </html>
