--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
     <footer>💘P&G💘</footer>
 </body>
 
-<script src="/node_modules/axios/dist/axios.min.js"></script>
-<script type="module" src="/src/script/main.js"></script>
+<script src="node_modules/axios/dist/axios.min.js"></script>
+<script type="module" src="src/script/main.js"></script>
 </html>
