--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header class="head">
-        <h1>Quotazione in tempo reale</h1>
+        <h2>QUOTAZIONE IN TEMPO REALE OGGI: </h2>
         <p class="pEuro"></p>
         <p class="pDolar"></p>
     </header>
