--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <p>G💕P</p>
     </footer>
   </body>
-
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="/node_modules/axios/dist/axios.min.js"></script>
   <script type="module" src="/src/script/main.js"></script>
 </html>
