--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       content="upgrade-insecure-requests"
     />
     <link rel="stylesheet" href="src/style/index.css" />
+    <script defer src="https://momentjs.com/downloads/moment.min.js"></script>
+    <script
+      defer
+      src="https://momentjs.com/downloads/moment-timezone-with-data.min.js"
+    ></script>
     <title>Quotazione EUR | USD | BRL</title>
   </head>
 
@@ -64,7 +69,7 @@
       <p>G💕P</p>
     </footer>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="/node_modules/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   <script type="module" src="/src/script/main.js"></script>
 </html>
